<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".TakeOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue"
                android:id="@+id/allcateories"
                app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:endIconMode="custom"
                android:layout_weight="3.8"
                >

                <AutoCompleteTextView
                    android:id="@+id/allcateoriesautocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:singleLine="true"
                    android:text="All Categories"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <ImageButton
                android:id="@+id/refreshbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_baseline_refresh_24"
                android:contentDescription="@string/refresh"

                android:layout_weight="0.2"
                app:tint="@color/colorPrimary" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/white"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
            >

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:singleLine="true"
                android:text="@string/sub_categories_brands" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:visibility="gone"
            android:paddingBottom="8dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/others" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginStart="8dp"
                android:text="@string/all_packs" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_product" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>