<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".TakeOrderActivity">

    <LinearLayout
        android:id="@+id/top_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:background="@color/Purple_Color">
    <RelativeLayout
        android:id="@+id/relativelayoutmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/selector_nav_item"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HUL-I10A485P719"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_header_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Laxmi Restaurant"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:contentDescription="Details"
            />

    </RelativeLayout>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_below="@id/relativelayoutmenu"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/main_toolbar"
            layout="@layout/toolbar_layout" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:background="@color/Pink_color"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/esp_0_0"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ta_0_0"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tlsd_0"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar_container"
        android:layout_above="@id/bottom_navigation"
         />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/bottom_nav_color_selector"
        app:itemTextColor="@color/bottom_nav_color_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menubar" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/floating_cart_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignParentEnd="true"
        app:cardBackgroundColor="@color/Purple_Color"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">
            <TextView
                android:id="@+id/tv_cart_item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="2 Items" />

            <View
                android:id="@+id/partline"
                android:layout_width="2sp"
                android:layout_gravity="center"
                android:layout_height="25sp"
                android:layout_toRightOf="@id/tv_cart_item_count"
                android:background="@color/white"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp" />
            <TextView
                android:id="@+id/tv_cart_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/partline"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="₹1,225" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>