<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".OrderDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/toolbar_layout" />

    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/info_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar_layout"
            android:background="@drawable/btn_qps_background"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/esp_0_0"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ta_0_0"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tlsd_0"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    <FrameLayout
        android:id="@+id/confirm_return_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
       >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_return"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Confirm Return"
            android:textStyle="bold"
            android:background="@drawable/btn_qps_background"/>
    </FrameLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/info_bar"
        android:layout_above="@id/confirm_return_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Salesperson Orders"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:layout_alignParentStart="true"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/orderprofile"
                            app:tint="@color/grey"
                            android:layout_alignParentEnd="true"/>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Billed"
                        android:drawableStart="@drawable/orderprofile"
                        android:drawableTint="#4CAF50"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:layout_marginTop="8dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="Bill Amount"/>
                        <TextView
                            android:id="@+id/tv_bill_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text=": ₹7,757.55"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="View Order Details"
                        android:textColor="@color/Pink_color"
                        android:textStyle="bold"
                        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                        android:drawableTint="@color/Pink_color"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_order_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_order_details" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>